adding registration info

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,3 +7,8 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+:root [data-theme='wintry'] {
+	--theme-rounded-base: 3px;
+	--theme-rounded-container: 4px;
+}
