mt-12 no -translate--isuess with app bar hiding content

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -8,6 +8,13 @@ body {
 	@apply h-full overflow-hidden;
 }
 
+
+@font-face {
+	/* Reference name */
+	font-family: 'Rust';
+	/* For multiple files use commas, ex: url(), url(), ... */
+}
+
 :root [data-theme='wintry'] {
 	--theme-rounded-base: 3px;
 	--theme-rounded-container: 4px;
